[gd_scene load_steps=25 format=2]

[ext_resource path="res://games/bones7242/sprites/baseballx32.png" type="Texture" id=1]
[ext_resource path="res://games/bones7242/scripts/baseball.gd" type="Script" id=2]
[ext_resource path="res://games/bones7242/scripts/batter.gd" type="Script" id=3]
[ext_resource path="res://games/bones7242/scripts/scn_bones7242.gd" type="Script" id=4]
[ext_resource path="res://games/bones7242/sounds/hitHurt (7).wav" type="AudioStream" id=5]
[ext_resource path="res://games/bones7242/scripts/bat_area2d.gd" type="Script" id=6]
[ext_resource path="res://games/bones7242/sprites/shadow.png" type="Texture" id=7]
[ext_resource path="res://games/bones7242/sprites/background.png" type="Texture" id=8]
[ext_resource path="res://games/bones7242/scripts/RichTextLabel.gd" type="Script" id=9]
[ext_resource path="res://games/bones7242/scripts/scoreboard.gd" type="Script" id=10]
[ext_resource path="res://games/bones7242/sounds/pickupCoin (3).wav" type="AudioStream" id=11]
[ext_resource path="res://shared/menu_pause/PauseMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://games/bones7242/sprites/flagx32.png" type="Texture" id=13]
[ext_resource path="res://games/bones7242/scripts/spr_flag.gd" type="Script" id=14]
[ext_resource path="res://games/bones7242/scripts/shadow_2d.gd" type="Script" id=15]
[ext_resource path="res://games/bones7242/scripts/snd_airtime.gd" type="Script" id=16]
[ext_resource path="res://games/bones7242/sounds/jump (1).wav" type="AudioStream" id=17]
[ext_resource path="res://games/bones7242/sounds/click (1).wav" type="AudioStream" id=18]
[ext_resource path="res://games/bones7242/scripts/snd_click.gd" type="Script" id=19]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AudioStreamSample" id=5]
data = PoolByteArray( 133, 153, 172, 191, 210, 228, 247, 10, 29, 48, 66, 85, 104, 122, 120, 101, 82, 63, 45, 26, 8, 245, 227, 208, 190, 171, 153, 135, 137, 156, 174, 193, 211, 229, 248, 10, 28, 46, 64, 82, 100, 118, 116, 97, 79, 61, 43, 25, 7, 245, 228, 210, 192, 174, 157, 139, 141, 159, 177, 195, 213, 230, 248, 9, 27, 44, 62, 79, 97, 114, 112, 94, 77, 59, 42, 24, 7, 246, 229, 211, 194, 177, 160, 143, 145, 163, 180, 197, 214, 231, 248, 9, 26, 43, 60, 76, 93, 110, 108, 91, 74, 57, 40, 23, 7, 246, 230, 213, 196, 180, 164, 147, 149, 166, 183, 199, 216, 232, 248, 9, 25, 41, 57, 74, 90, 106, 104, 87, 71, 55, 39, 23, 6, 246, 230, 215, 199, 183, 167, 151, 153, 169, 185, 201, 217, 233, 249, 8, 24, 40, 55, 71, 86, 102, 100, 84, 68, 53, 37, 22, 6, 247, 231, 216, 201, 186, 170, 155, 157, 173, 188, 203, 219, 234, 249, 8, 23, 38, 53, 68, 83, 98, 96, 81, 66, 51, 36, 21, 6, 247, 232, 218, 203, 188, 174, 159, 161, 176, 191, 205, 220, 235, 249, 8, 22, 37, 51, 65, 79, 94, 92, 77, 63, 48, 34, 20, 6, 248, 233, 219, 205, 191, 177, 163, 165, 179, 194, 208, 222, 236, 249, 7, 21, 35, 49, 62, 76, 90, 88, 74, 60, 46, 33, 19, 5, 248, 234, 221, 207, 194, 181, 167, 169, 183, 196, 210, 223, 236, 250, 7, 20, 33, 46, 60, 73, 86, 84, 71, 57, 44, 31, 18, 5, 248, 235, 222, 210, 197, 184, 172, 173, 186, 199, 212, 225, 237, 250, 7, 19, 32, 44, 57, 69, 81, 80, 67, 55, 42, 30, 17, 5, 249, 236, 224, 212, 200, 188, 176, 177, 190, 202, 214, 226, 238, 250, 6, 18, 30, 42, 54, 66, 77, 76, 64, 52, 40, 28, 16, 5, 249, 237, 226, 214, 203, 191, 180, 181, 193, 205, 216, 228, 239, 251, 6, 17, 29, 40, 51, 62, 73, 72, 60, 49, 38, 27, 15, 4, 249, 238, 227, 216, 205, 195, 184, 185, 196, 207, 218, 229, 240, 251, 6, 16, 27, 38, 48, 59, 69, 68, 57, 46, 36, 25, 15, 4, 250, 239, 229, 218, 208, 198, 187, 189, 199, 209, 220, 230, 241, 251, 5, 16, 26, 36, 47, 57, 67, 66, 56, 45, 35, 25, 14, 4, 250, 239, 229, 219, 208, 198, 188, 189, 199, 210, 220, 230, 241, 251, 5, 16, 26, 36, 47, 57, 67, 66, 55, 45, 35, 25, 14, 4, 250, 239, 229, 219, 209, 198, 188, 189, 200, 210, 220, 231, 241, 251, 5, 16, 26, 36, 46, 56, 67, 65, 55, 45, 35, 24, 14, 4, 250, 240, 229, 219, 209, 199, 189, 190, 200, 210, 220, 231, 241, 251, 5, 15, 26, 36, 46, 56, 66, 65, 55, 45, 34, 24, 14, 4, 250, 240, 229, 219, 209, 199, 189, 190, 200, 211, 221, 231, 241, 251, 5, 15, 25, 36, 46, 56, 66, 65, 54, 44, 34, 24, 14, 4, 250, 240, 230, 220, 209, 199, 189, 191, 201, 211, 221, 231, 241, 251, 5, 15, 25, 35, 45, 55, 66, 64, 54, 44, 34, 24, 14, 4, 250, 240, 230, 220, 210, 200, 190, 191, 201, 211, 221, 231, 241, 251, 5, 15, 25, 35, 45, 55, 65, 64, 54, 44, 34, 24, 14, 4, 250, 240, 230, 220, 210, 200, 190, 191, 201, 211, 221, 231, 241, 251, 5, 15, 25, 35, 45, 55, 65, 63, 54, 44, 34, 24, 14, 4, 250, 240, 230, 220, 210, 200, 190, 192, 202, 212, 221, 231, 241, 251, 5, 15, 25, 35, 45, 55, 64, 63, 53, 43, 33, 24, 14, 4, 250, 240, 230, 220, 211, 201, 191, 192, 202, 212, 222, 232, 241, 251, 5, 15, 25, 35, 44, 54, 64, 63, 53, 43, 33, 23, 14, 4, 250, 240, 230, 221, 211, 201, 191, 192, 202, 212, 222, 232, 241, 251, 5, 15, 25, 34, 44, 54, 64, 62, 53, 43, 33, 23, 14, 4, 250, 240, 231, 221, 211, 201, 192, 193, 203, 212, 222, 232, 242, 251, 5, 15, 24, 34, 44, 54, 63, 62, 52, 43, 33, 23, 13, 4, 250, 240, 231, 221, 211, 202, 192, 193, 203, 213, 222, 232, 242, 251, 5, 15, 24, 34, 44, 53, 63, 62, 52, 42, 33, 23, 13, 4, 250, 240, 231, 221, 212, 202, 192, 194, 203, 213, 222, 232, 242, 251, 5, 15, 24, 34, 43, 53, 62, 61, 52, 42, 32, 23, 13, 4, 250, 241, 231, 221, 212, 202, 193, 194, 204, 213, 223, 232, 242, 251, 5, 14, 24, 34, 43, 53, 62, 61, 51, 42, 32, 23, 13, 4, 250, 241, 231, 222, 212, 203, 193, 194, 204, 213, 223, 232, 242, 251, 5, 14, 24, 33, 43, 52, 62, 60, 51, 42, 32, 23, 13, 4, 250, 241, 231, 222, 212, 203, 194, 195, 204, 214, 223, 233, 242, 251, 5, 14, 24, 33, 42, 52, 61, 60, 51, 41, 32, 22, 13, 4, 250, 241, 231, 222, 213, 203, 194, 195, 204, 214, 223, 233, 242, 251, 5, 14, 24, 33, 42, 52, 61, 60, 50, 41, 32, 22, 13, 4, 250, 241, 232, 222, 213, 204, 194, 195, 205, 214, 223, 233, 242, 251, 5, 14, 23, 33, 42, 51, 61, 59, 50, 41, 31, 22, 13, 4, 250, 241, 232, 222, 213, 204, 195, 196, 205, 214, 224, 233, 242, 251, 5, 14, 23, 32, 42, 51, 60, 59, 50, 40, 31, 22, 13, 4, 250, 241, 232, 223, 213, 204, 195, 196, 205, 215, 224, 233, 242, 251, 5, 14, 23, 32, 41, 51, 60, 59, 49, 40, 31, 22, 13, 3, 250, 241, 232, 223, 214, 205, 195, 197, 206, 215, 224, 233, 242, 252, 5, 14, 23, 32, 41, 50, 59, 58, 49, 40, 31, 22, 13, 3, 250, 241, 232, 223, 214, 205, 196, 197, 206, 215, 224, 233, 242, 252, 5, 14, 23, 32, 41, 50, 59, 58, 49, 40, 31, 22, 12, 3, 250, 241, 232, 223, 214, 205, 196, 197, 206, 215, 224, 234, 243, 252, 5, 14, 23, 32, 41, 50, 59, 57, 48, 39, 30, 21, 12, 3, 250, 241, 232, 223, 215, 206, 197, 198, 207, 216, 225, 234, 243, 252, 5, 14, 22, 31, 40, 49, 58, 57, 48, 39, 30, 21, 12, 3, 250, 242, 233, 224, 215, 206, 197, 198, 207, 216, 225, 234, 243, 252, 5, 13, 22, 31, 40, 49, 58, 57, 48, 39, 30, 21, 12, 3, 250, 242, 233, 224, 215, 206, 197, 198, 207, 216, 225, 234, 243, 252, 4, 13, 22, 31, 40, 49, 57, 56, 47, 39, 30, 21, 12, 3, 251, 242, 233, 224, 215, 207, 198, 199, 208, 216, 225, 234, 243, 252, 4, 13, 22, 31, 40, 48, 57, 56, 47, 38, 30, 21, 12, 3, 251, 242, 233, 224, 216, 207, 198, 199, 208, 217, 225, 234, 243, 252, 4, 13, 22, 31, 39, 48, 57, 56, 47, 38, 29, 21, 12, 3, 251, 242, 233, 225, 216, 207, 199, 200, 208, 217, 226, 234, 243, 252, 4, 13, 22, 30, 39, 48, 56, 55, 47, 38, 29, 21, 12, 3, 251, 242, 233, 225, 216, 207, 199, 200, 209, 217, 226, 235, 243, 252, 4, 13, 22, 30, 39, 47, 56, 55, 46, 38, 29, 20, 12, 3, 251, 242, 234, 225, 216, 208, 199, 200, 209, 218, 226, 235, 243, 252, 4, 13, 21, 30, 38, 47, 56, 54, 46, 37, 29, 20, 12, 3, 251, 242, 234, 225, 217, 208, 200, 201, 209, 218, 226, 235, 243, 252, 4, 13, 21, 30, 38, 47, 55, 54, 46, 37, 29, 20, 12, 3, 251, 242, 234, 225, 217, 208, 200, 201, 210, 218, 226, 235, 243, 252, 4, 13, 21, 30, 38, 46, 55, 54, 45, 37, 28, 20, 12, 3, 251, 242, 234, 226, 217, 209, 200, 201, 210, 218, 227, 235, 243, 252, 4, 13, 21, 29, 38, 46, 54, 53, 45, 37, 28, 20, 11, 3, 251, 242, 234, 226, 217, 209, 201, 202, 210, 219, 227, 235, 244, 252, 4, 13, 21, 29, 37, 46, 54, 53, 45, 36, 28, 20, 11, 3, 251, 243, 234, 226, 218, 209, 201, 202, 211, 219, 227, 235, 244, 252, 4, 12, 21, 29, 37, 45, 54, 53, 44, 36, 28, 20, 11, 3, 251, 243, 234, 226, 218, 210, 202, 203, 211, 219, 227, 236, 244, 252, 4, 12, 21, 29, 37, 45, 53, 52, 44, 36, 28, 19, 11, 3, 251, 243, 235, 226, 218, 210, 202, 203, 211, 219, 227, 236, 244, 252, 4, 12, 20, 28, 37, 45, 53, 52, 44, 36, 27, 19, 11, 3, 251, 243, 235, 227, 219, 210, 202, 203, 211, 220, 228, 236, 244, 252, 4, 12, 20, 28, 36, 44, 52, 51, 43, 35, 27, 19, 11, 3, 251, 243, 235, 227, 219, 211, 203, 204, 212, 220, 228, 236, 244, 252, 4, 12, 20, 28, 36, 44, 52, 51, 43, 35, 27, 19, 11, 3, 251, 243, 235, 227, 219, 211, 203, 204, 212, 220, 228, 236, 244, 252, 4, 12, 20, 28, 36, 44, 52, 51, 43, 35, 27, 19, 11, 3, 251, 243, 235, 227, 219, 211, 203, 205, 212, 220, 228, 236, 244, 252, 4, 12, 20, 28, 36, 43, 51, 50, 42, 34, 27, 19, 11, 3, 251, 243, 235, 227, 220, 212, 204, 205, 213, 221, 229, 236, 244, 252, 4, 12, 20, 27, 35, 43, 51, 50, 42, 34, 26, 19, 11, 3, 251, 243, 235, 228, 220, 212, 204, 205, 213, 221, 229, 237, 244, 252, 4, 12, 19, 27, 35, 43, 51, 50, 42, 34, 26, 18, 11, 3, 251, 243, 236, 228, 220, 212, 205, 206, 213, 221, 229, 237, 244, 252, 4, 12, 19, 27, 35, 42, 50, 49, 41, 34, 26, 18, 11, 3, 251, 243, 236, 228, 220, 213, 205, 206, 214, 221, 229, 237, 244, 252, 4, 12, 19, 27, 34, 42, 50, 49, 41, 33, 26, 18, 10, 3, 251, 244, 236, 228, 221, 213, 205, 206, 214, 222, 229, 237, 245, 252, 4, 11, 19, 27, 34, 42, 49, 48, 41, 33, 26, 18, 10, 3, 251, 244, 236, 228, 221, 213, 206, 207, 214, 222, 230, 237, 245, 252, 4, 11, 19, 26, 34, 41, 49, 48, 40, 33, 25, 18, 10, 3, 251, 244, 236, 229, 221, 214, 206, 207, 215, 222, 230, 237, 245, 252, 4, 11, 19, 26, 34, 41, 49, 48, 40, 33, 25, 18, 10, 3, 251, 244, 236, 229, 221, 214, 207, 208, 215, 222, 230, 237, 245, 252, 4, 11, 19, 26, 33, 41, 48, 47, 40, 32, 25, 18, 10, 3, 251, 244, 237, 229, 222, 214, 207, 208, 215, 223, 230, 238, 245, 252, 4, 11, 18, 26, 33, 41, 48, 47, 40, 32, 25, 17, 10, 3, 251, 244, 237, 229, 222, 215, 207, 208, 216, 223, 230, 238, 245, 252, 4, 11, 18, 26, 33, 40, 47, 47, 39, 32, 25, 17, 10, 3, 251, 244, 237, 230, 222, 215, 208, 209, 216, 223, 231, 238, 245, 252, 4, 11, 18, 25, 33, 40, 47, 46, 39, 32, 24, 17, 10, 3, 251, 244, 237, 230, 223, 215, 208, 209, 216, 223, 231, 238, 245, 252, 4, 11, 18, 25, 32, 40, 47, 46, 39, 31, 24, 17, 10, 3, 251, 244, 237, 230, 223, 216, 208, 209, 217, 224, 231, 238, 245, 252, 4, 11, 18, 25, 32, 39, 46, 45, 38, 31, 24, 17, 10, 3, 251, 244, 237, 230, 223, 216, 209, 210, 217, 224, 231, 238, 245, 252, 4, 11, 18, 25, 32, 39, 46, 45, 38, 31, 24, 17, 10, 3, 252, 244, 237, 230, 223, 216, 209, 210, 217, 224, 231, 238, 245, 252, 3, 10, 18, 25, 32, 39, 46, 45, 38, 31, 24, 17, 10, 3, 252, 245, 238, 231, 224, 217, 210, 211, 218, 225, 232, 239, 245, 252, 3, 10, 17, 24, 31, 38, 45, 44, 37, 30, 23, 16, 9, 3, 252, 245, 238, 231, 224, 217, 210, 211, 218, 225, 232, 239, 246, 252, 3, 10, 17, 24, 31, 38, 45, 44, 37, 30, 23, 16, 9, 2, 252, 245, 238, 231, 224, 217, 210, 211, 218, 225, 232, 239, 246, 253, 3, 10, 17, 24, 31, 38, 44, 44, 37, 30, 23, 16, 9, 2, 252, 245, 238, 231, 224, 218, 211, 212, 218, 225, 232, 239, 246, 253, 3, 10, 17, 24, 30, 37, 44, 43, 36, 30, 23, 16, 9, 2, 252, 245, 238, 231, 225, 218, 211, 212, 219, 226, 232, 239, 246, 253, 3, 10, 17, 23, 30, 37, 44, 43, 36, 29, 23, 16, 9, 2, 252, 245, 238, 232, 225, 218, 212, 212, 219, 226, 233, 239, 246, 253, 3, 10, 17, 23, 30, 37, 43, 42, 36, 29, 22, 16, 9, 2, 252, 245, 238, 232, 225, 219, 212, 213, 219, 226, 233, 239, 246, 253, 3, 10, 16, 23, 30, 36, 43, 42, 35, 29, 22, 16, 9, 2, 252, 245, 239, 232, 225, 219, 212, 213, 220, 226, 233, 240, 246, 253, 3, 10, 16, 23, 29, 36, 42, 42, 35, 29, 22, 15, 9, 2, 252, 245, 239, 232, 226, 219, 213, 214, 220, 227, 233, 240, 246, 253, 3, 10, 16, 23, 29, 36, 42, 41, 35, 28, 22, 15, 9, 2, 252, 245, 239, 232, 226, 220, 213, 214, 220, 227, 233, 240, 246, 253, 3, 10, 16, 22, 29, 35, 42, 41, 34, 28, 22, 15, 9, 2, 252, 245, 239, 233, 226, 220, 213, 214, 221, 227, 234, 240, 246, 253, 3, 9, 16, 22, 29, 35, 41, 41, 34, 28, 21, 15, 9, 2, 252, 246, 239, 233, 227, 220, 214, 215, 221, 227, 234, 240, 246, 253, 3, 9, 16, 22, 28, 35, 41, 40, 34, 27, 21, 15, 9, 2, 252, 246, 239, 233, 227, 221, 214, 215, 221, 228, 234, 240, 246, 253, 3, 9, 16, 22, 28, 34, 41, 40, 33, 27, 21, 15, 8, 2, 252, 246, 240, 233, 227, 221, 215, 215, 222, 228, 234, 240, 247, 253, 3, 9, 15, 22, 28, 34, 40, 39, 33, 27, 21, 15, 8, 2, 252, 246, 240, 233, 227, 221, 215, 216, 222, 228, 234, 241, 247, 253, 3, 9, 15, 21, 28, 34, 40, 39, 33, 27, 21, 14, 8, 2, 252, 246, 240, 234, 228, 222, 215, 216, 222, 228, 235, 241, 247, 253, 3, 9, 15, 21, 27, 33, 39, 39, 33, 26, 20, 14, 8, 2, 252, 246, 240, 234, 228, 222, 216, 217, 223, 229, 235, 241, 247, 253, 3, 9, 15, 21, 27, 33, 39, 38, 32, 26, 20, 14, 8, 2, 252, 246, 240, 234, 228, 222, 216, 217, 223, 229, 235, 241, 247, 253, 3, 9, 15, 21, 27, 33, 39, 38, 32, 26, 20, 14, 8, 2, 252, 246, 240, 234, 228, 222, 217, 217, 223, 229, 235, 241, 247, 253, 3, 9, 15, 21, 26, 32, 38, 37, 32, 26, 20, 14, 8, 2, 252, 246, 240, 235, 229, 223, 217, 218, 224, 229, 235, 241, 247, 253, 3, 9, 15, 20, 26, 32, 38, 37, 31, 25, 20, 14, 8, 2, 252, 246, 241, 235, 229, 223, 217, 218, 224, 230, 236, 241, 247, 253, 3, 9, 14, 20, 26, 32, 37, 37, 31, 25, 19, 14, 8, 2, 252, 246, 241, 235, 229, 223, 218, 218, 224, 230, 236, 241, 247, 253, 3, 8, 14, 20, 26, 31, 37, 36, 31, 25, 19, 13, 8, 2, 252, 247, 241, 235, 229, 224, 218, 219, 225, 230, 236, 242, 247, 253, 3, 8, 14, 20, 25, 31, 37, 36, 30, 25, 19, 13, 8, 2, 252, 247, 241, 235, 230, 224, 218, 219, 225, 231, 236, 242, 247, 253, 3, 8, 14, 20, 25, 31, 36, 36, 30, 24, 19, 13, 8, 2, 252, 247, 241, 236, 230, 224, 219, 220, 225, 231, 236, 242, 248, 253, 3, 8, 14, 19, 25, 30, 36, 35, 30, 24, 19, 13, 7, 2, 252, 247, 241, 236, 230, 225, 219, 220, 225, 231, 237, 242, 248, 253, 3, 8, 14, 19, 25, 30, 36, 35, 29, 24, 18, 13, 7, 2, 252, 247, 241, 236, 231, 225, 220, 220, 226, 231, 237, 242, 248, 253, 3, 8, 13, 19, 24, 30, 35, 34, 29, 24, 18, 13, 7, 2, 252, 247, 242, 236, 231, 225, 220, 221, 226, 232, 237, 242, 248, 253, 3, 8, 13, 19, 24, 29, 35, 34, 29, 23, 18, 13, 7, 2, 252, 247, 242, 236, 231, 226, 220, 221, 226, 232, 237, 242, 248, 253, 3, 8, 13, 18, 24, 29, 34, 34, 28, 23, 18, 12, 7, 2, 253, 247, 242, 237, 231, 226, 221, 221, 227, 232, 237, 243, 248, 253, 2, 8, 13, 18, 24, 29, 34, 33, 28, 23, 18, 12, 7, 2, 253, 247, 242, 237, 232, 226, 221, 222, 227, 232, 238, 243, 248, 253, 2, 8, 13, 18, 23, 28, 34, 33, 28, 23, 17, 12, 7, 2, 253, 247, 242, 237, 232, 227, 222, 222, 227, 233, 238, 243, 248, 253, 2, 8, 13, 18, 23, 28, 33, 33, 27, 22, 17, 12, 7, 2, 253, 247, 242, 237, 232, 227, 222, 223, 228, 233, 238, 243, 248, 253, 2, 7, 13, 18, 23, 28, 33, 32, 27, 22, 17, 12, 7, 2, 253, 248, 243, 237, 232, 227, 222, 223, 228, 233, 238, 243, 248, 253, 2, 7, 12, 17, 22, 27, 32, 32, 27, 22, 17, 12, 7, 2, 253, 248, 243, 238, 233, 228, 223, 223, 228, 233, 238, 243, 248, 253, 2, 7, 12, 17, 22, 27, 32, 31, 26, 22, 17, 12, 7, 2, 253, 248, 243, 238, 233, 228, 223, 224, 229, 234, 239, 243, 248, 253, 2, 7, 12, 17, 22, 27, 32, 31, 26, 21, 16, 11, 7, 2, 253, 248, 243, 238, 233, 228, 223, 224, 229, 234, 239, 244, 249, 253, 2, 7, 12, 17, 22, 26, 31, 31, 26, 21, 16, 11, 6, 2, 253, 248, 243, 238, 233, 229, 224, 224, 229, 234, 239, 244, 249, 253, 2, 7, 12, 17, 21, 26, 31, 30, 26, 21, 16, 11, 6, 2, 253, 248, 243, 239, 234, 229, 224, 225, 230, 234, 239, 244, 249, 253, 2, 7, 12, 16, 21, 26, 31, 30, 25, 20, 16, 11, 6, 2, 253, 248, 243, 239, 234, 229, 225, 225, 230, 235, 239, 244, 249, 253, 2, 7, 12, 16, 21, 26, 30, 30, 25, 20, 16, 11, 6, 2, 253, 248, 244, 239, 234, 230, 225, 226, 230, 235, 240, 244, 249, 253, 2, 7, 11, 16, 21, 25, 30, 29, 25, 20, 15, 11, 6, 2, 253, 248, 244, 239, 235, 230, 225, 226, 231, 235, 240, 244, 249, 254, 2, 7, 11, 16, 20, 25, 29, 29, 24, 20, 15, 11, 6, 1, 253, 248, 244, 239, 235, 230, 226, 226, 231, 235, 240, 244, 249, 254, 2, 7, 11, 16, 20, 25, 29, 28, 24, 19, 15, 10, 6, 1, 253, 248, 244, 240, 235, 231, 226, 227, 231, 236, 240, 245, 249, 254, 2, 6, 11, 15, 20, 24, 29, 28, 24, 19, 15, 10, 6, 1, 253, 249, 244, 240, 235, 231, 227, 227, 232, 236, 240, 245, 249, 254, 2, 6, 11, 15, 20, 24, 28, 28, 23, 19, 15, 10, 6, 1, 253, 249, 244, 240, 236, 231, 227, 227, 232, 236, 241, 245, 249, 254, 2, 6, 11, 15, 19, 24, 28, 27, 23, 19, 14, 10, 6, 1, 253, 249, 244, 240, 236, 232, 227, 228, 232, 236, 241, 245, 249, 254, 2, 6, 10, 15, 19, 23, 27, 27, 23, 18, 14, 10, 6, 1, 253, 249, 245, 240, 236, 232, 228, 228, 232, 237, 241, 245, 249, 254, 2, 6, 10, 15, 19, 23, 27, 27, 22, 18, 14, 10, 6, 1, 253, 249, 245, 241, 236, 232, 228, 229, 233, 237, 241, 245, 250, 254, 2, 6, 10, 14, 18, 23, 27, 26, 22, 18, 14, 10, 5, 1, 253, 249, 245, 241, 237, 233, 228, 229, 233, 237, 241, 245, 250, 254, 2, 6, 10, 14, 18, 22, 26, 26, 22, 18, 14, 9, 5, 1, 253, 249, 245, 241, 237, 233, 229, 229, 233, 238, 242, 246, 250, 254, 2, 6, 10, 14, 18, 22, 26, 25, 21, 17, 13, 9, 5, 1, 253, 249, 245, 241, 237, 233, 229, 230, 234, 238, 242, 246, 250, 254, 2, 6, 10, 14, 18, 22, 26, 25, 21, 17, 13, 9, 5, 1, 253, 249, 245, 241, 237, 234, 230, 230, 234, 238, 242, 246, 250, 254, 2, 6, 10, 13, 17, 21, 25, 25, 21, 17, 13, 9, 5, 1, 253, 249, 246, 242, 238, 234, 230, 231, 234, 238, 242, 246, 250, 254, 2, 6, 9, 13, 17, 21, 25, 24, 20, 17, 13, 9, 5, 1, 253, 249, 246, 242, 238, 234, 230, 231, 235, 239, 242, 246, 250, 254, 2, 5, 9, 13, 17, 21, 24, 24, 20, 16, 13, 9, 5, 1, 253, 250, 246, 242, 238, 235, 231, 231, 235, 239, 243, 246, 250, 254, 2, 5, 9, 13, 17, 20, 24, 24, 20, 16, 12, 9, 5, 1, 253, 250, 246, 242, 239, 235, 231, 232, 235, 239, 243, 246, 250, 254, 2, 5, 9, 13, 16, 20, 24, 23, 19, 16, 12, 8, 5, 1, 253, 250, 246, 242, 239, 235, 232, 232, 236, 239, 243, 247, 250, 254, 2, 5, 9, 12, 16, 20, 23, 23, 19, 16, 12, 8, 5, 1, 253, 250, 246, 243, 239, 236, 232, 232, 236, 240, 243, 247, 250, 254, 2, 5, 9, 12, 16, 19, 23, 22, 19, 15, 12, 8, 5, 1, 253, 250, 246, 243, 239, 236, 232, 233, 236, 240, 243, 247, 250, 254, 1, 5, 9, 12, 16, 19, 22, 22, 19, 15, 12, 8, 5, 1, 254, 250, 247, 243, 240, 236, 233, 233, 237, 240, 244, 247, 251, 254, 1, 5, 8, 12, 15, 19, 22, 22, 18, 15, 11, 8, 4, 1, 254, 250, 247, 243, 240, 236, 233, 234, 237, 240, 244, 247, 251, 254, 1, 5, 8, 12, 15, 18, 22, 21, 18, 14, 11, 8, 4, 1, 254, 250, 247, 244, 240, 237, 233, 234, 237, 241, 244, 247, 251, 254, 1, 5, 8, 11, 15, 18, 21, 21, 18, 14, 11, 8, 4, 1, 254, 250, 247, 244, 240, 237, 234, 234, 238, 241, 244, 247, 251, 254, 1, 5, 8, 11, 14, 18, 21, 21, 17, 14, 11, 7, 4, 1, 254, 250, 247, 244, 241, 237, 234, 235, 238, 241, 244, 248, 251, 254, 1, 5, 8, 11, 14, 17, 21, 20, 17, 14, 11, 7, 4, 1, 254, 251, 247, 244, 241, 238, 235, 235, 238, 241, 245, 248, 251, 254, 1, 4, 8, 11, 14, 17, 20, 20, 17, 13, 10, 7, 4, 1, 254, 251, 247, 244, 241, 238, 235, 235, 239, 242, 245, 248, 251, 254, 1, 4, 7, 11, 14, 17, 20, 19, 16, 13, 10, 7, 4, 1, 254, 251, 248, 245, 241, 238, 235, 236, 239, 242, 245, 248, 251, 254, 1, 4, 7, 10, 13, 16, 19, 19, 16, 13, 10, 7, 4, 1, 254, 251, 248, 245, 242, 239, 236, 236, 239, 242, 245, 248, 251, 254, 1, 4, 7, 10, 13, 16, 19, 19, 16, 13, 10, 7, 4, 1, 254, 251, 248, 245, 242, 239, 236, 237, 239, 242, 245, 248, 251, 254, 1, 4, 7, 10, 13, 16, 19, 18, 15, 12, 10, 7, 4, 1, 254, 251, 248, 245, 242, 239, 237, 237, 240, 243, 246, 248, 251, 254, 1, 4, 7, 10, 13, 15, 18, 18, 15, 12, 9, 6, 4, 1, 254, 251, 248, 245, 243, 240, 237, 237, 240, 243, 246, 249, 251, 254, 1, 4, 7, 10, 12, 15, 18, 18, 15, 12, 9, 6, 4, 1, 254, 251, 248, 246, 243, 240, 237, 238, 240, 243, 246, 249, 252, 254, 1, 4, 7, 9, 12, 15, 18, 17, 14, 12, 9, 6, 3, 1, 254, 251, 249, 246, 243, 240, 238, 238, 241, 243, 246, 249, 252, 254, 1, 4, 6, 9, 12, 14, 17, 17, 14, 11, 9, 6, 3, 1, 254, 251, 249, 246, 243, 241, 238, 238, 241, 244, 246, 249, 252, 254, 1, 4, 6, 9, 12, 14, 17, 16, 14, 11, 8, 6, 3, 1, 254, 251, 249, 246, 244, 241, 238, 239, 241, 244, 247, 249, 252, 254, 1, 4, 6, 9, 11, 14, 16, 16, 13, 11, 8, 6, 3, 1, 254, 252, 249, 246, 244, 241, 239, 239, 242, 244, 247, 249, 252, 254, 1, 3, 6, 8, 11, 13, 16, 16, 13, 11, 8, 6, 3, 1, 254, 252, 249, 247, 244, 242, 239, 240, 242, 245, 247, 249, 252, 254, 1, 3, 6, 8, 11, 13, 16, 15, 13, 10, 8, 5, 3, 1, 254, 252, 249, 247, 244, 242, 240, 240, 242, 245, 247, 250, 252, 254, 1, 3, 6, 8, 10, 13, 15, 15, 12, 10, 8, 5, 3, 1, 254, 252, 249, 247, 245, 242, 240, 240, 243, 245, 247, 250, 252, 254, 1, 3, 6, 8, 10, 12, 15, 15, 12, 10, 7, 5, 3, 1, 254, 252, 250, 247, 245, 243, 240, 241, 243, 245, 248, 250, 252, 255, 1, 3, 5, 8, 10, 12, 14, 14, 12, 10, 7, 5, 3, 0, 254, 252, 250, 247, 245, 243, 241, 241, 243, 246, 248, 250, 252, 255, 1, 3, 5, 7, 10, 12, 14, 14, 12, 9, 7, 5, 3, 0, 254, 252, 250, 248, 246, 243, 241, 241, 244, 246, 248, 250, 252, 255, 1, 3, 5, 7, 9, 12, 14, 13, 11, 9, 7, 5, 3, 0, 254, 252, 250, 248, 246, 244, 242, 242, 244, 246, 248, 250, 252, 255, 1, 3, 5, 7, 9, 11, 13, 13, 11, 9, 7, 5, 2, 0, 254, 252, 250, 248, 246, 244, 242, 242, 244, 246, 248, 250, 253, 255, 1, 3, 5, 7, 9, 11, 13, 13, 11, 9, 6, 4, 2, 0, 254, 252, 250, 248, 246, 244, 242, 243, 245, 247, 249, 251, 253, 255, 1, 3, 5, 7, 9, 11, 13, 12, 10, 8, 6, 4, 2, 0, 254, 252, 250, 249, 247, 245, 243, 243, 245, 247, 249, 251, 253, 255, 1, 3, 4, 6, 8, 10, 12, 12, 10, 8, 6, 4, 2, 0, 254, 253, 251, 249, 247, 245, 243, 243, 245, 247, 249, 251, 253, 255, 1, 2, 4, 6, 8, 10, 12, 11, 10, 8, 6, 4, 2, 0, 254, 253, 251, 249, 247, 245, 243, 244, 246, 247, 249, 251, 253, 255, 1, 2, 4, 6, 8, 10, 11, 11, 9, 7, 6, 4, 2, 0, 254, 253, 251, 249, 247, 246, 244, 244, 246, 248, 249, 251, 253, 255, 0, 2, 4, 6, 7, 9, 11, 11, 9, 7, 5, 4, 2, 0, 255, 253, 251, 249, 248, 246, 244, 244, 246, 248, 250, 251, 253, 255, 0, 2, 4, 6, 7, 9, 11, 10, 9, 7, 5, 4, 2, 0, 255, 253, 251, 250, 248, 246, 245, 245, 246, 248, 250, 251, 253, 255, 0, 2, 4, 5, 7, 9, 10, 10, 8, 7, 5, 3, 2, 0, 255, 253, 251, 250, 248, 247, 245, 245, 247, 248, 250, 252, 253, 255, 0, 2, 4, 5, 7, 8, 10, 10, 8, 6, 5, 3, 2, 0, 255, 253, 252, 250, 248, 247, 245, 246, 247, 249, 250, 252, 253, 255, 0, 2, 3, 5, 6, 8, 9, 9, 8, 6, 5, 3, 2, 0, 255, 253, 252, 250, 249, 247, 246, 246, 247, 249, 250, 252, 253, 255, 0, 2, 3, 5, 6, 8, 9, 9, 7, 6, 4, 3, 2, 0, 255, 253, 252, 250, 249, 248, 246, 246, 248, 249, 251, 252, 253, 255, 0, 2, 3, 4, 6, 7, 9, 8, 7, 6, 4, 3, 1, 0, 255, 253, 252, 251, 249, 248, 247, 247, 248, 249, 251, 252, 254, 255, 0, 2, 3, 4, 6, 7, 8, 8, 7, 5, 4, 3, 1, 0, 255, 253, 252, 251, 250, 248, 247, 247, 248, 250, 251, 252, 254, 255, 0, 2, 3, 4, 5, 7, 8, 8, 6, 5, 4, 3, 1, 0, 255, 254, 252, 251, 250, 249, 247, 247, 249, 250, 251, 252, 254, 255, 0, 1, 3, 4, 5, 6, 8, 7, 6, 5, 4, 2, 1, 0, 255, 254, 252, 251, 250, 249, 248, 248, 249, 250, 251, 253, 254, 255, 0, 1, 3, 4, 5, 6, 7, 7, 6, 5, 3, 2, 1, 0, 255, 254, 253, 251, 250, 249, 248, 248, 249, 251, 252, 253, 254, 255, 0, 1, 2, 3, 5, 6, 7, 7, 5, 4, 3, 2, 1, 0, 255, 254, 253, 252, 251, 250, 248, 249, 250, 251, 252, 253, 254, 255, 0, 1, 2, 3, 4, 5, 6, 6, 5, 4, 3, 2, 1, 0, 255, 254, 253, 252, 251, 250, 249, 249, 250, 251, 252, 253, 254, 255, 0, 1, 2, 3, 4, 5, 6, 6, 5, 4, 3, 2, 1, 0, 255, 254, 253, 252, 251, 250, 249, 249, 250, 251, 252, 253, 254, 255, 0, 1, 2, 3, 4, 5, 6, 5, 5, 4, 3, 2, 1, 0, 255, 254, 253, 252, 251, 250, 250, 250, 251, 252, 252, 253, 254, 255, 0, 1, 2, 3, 3, 4, 5, 5, 4, 3, 2, 2, 1, 0, 255, 254, 253, 252, 252, 251, 250, 250, 251, 252, 253, 253, 254, 255, 0, 1, 2, 2, 3, 4, 5, 5, 4, 3, 2, 1, 1, 0, 255, 254, 253, 253, 252, 251, 250, 250, 251, 252, 253, 254, 254, 255, 0, 1, 1, 2, 3, 4, 4, 4, 4, 3, 2, 1, 1, 0, 255, 254, 254, 253, 252, 251, 251, 251, 252, 252, 253, 254, 254, 255, 0, 1, 1, 2, 3, 3, 4, 4, 3, 3, 2, 1, 0, 0, 255, 254, 254, 253, 252, 252, 251, 251, 252, 253, 253, 254, 255, 255, 0, 1, 1, 2, 2, 3, 4, 4, 3, 2, 2, 1, 0, 0, 255, 255, 254, 253, 253, 252, 252, 252, 252, 253, 253, 254, 255, 255, 0, 0, 1, 2, 2, 3, 3, 3, 3, 2, 1, 1, 0, 0, 255, 255, 254, 254, 253, 252, 252, 252, 253, 253, 254, 254, 255, 255, 0, 0, 1, 1, 2, 2, 3, 3, 2, 2, 1, 1, 0, 0, 255, 255, 254, 254, 253, 253, 252, 252, 253, 253, 254, 254, 255, 255, 0, 0, 1, 1, 2, 2, 3, 2, 2, 2, 1, 1, 0, 0, 255, 255, 254, 254, 254, 253, 253, 253, 253, 254, 254, 254, 255, 255, 0, 0, 1, 1, 1, 2, 2, 2, 2, 1, 1, 0, 0, 0, 255, 255, 255, 254, 254, 253, 253, 253, 253, 254, 254, 255, 255, 255, 0, 0, 0, 1, 1, 1, 2, 2, 1, 1, 1, 0, 0, 0, 255, 255, 255, 254, 254, 254, 253, 253, 254, 254, 254, 255, 255, 255, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 255, 255, 255, 255, 254, 254, 254, 254, 254, 254, 255, 255, 255, 255, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 254, 254, 254, 254, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0 )

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="StreamTexture" id=2]
flags = 4

[node name="HRDerby" type="Node"]
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 428.0
margin_top = 25.0
margin_right = 616.0
margin_bottom = 70.0
script = ExtResource( 9 )

[node name="Scoreboard" type="RichTextLabel" parent="."]
margin_left = 459.0
margin_top = 284.0
margin_right = 613.0
margin_bottom = 329.0
script = ExtResource( 10 )

[node name="baseball_area2d" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="baseball_area2d"]
shape = SubResource( 1 )

[node name="spr_baseball" type="Sprite" parent="baseball_area2d"]
texture = ExtResource( 1 )

[node name="snd_hit_ground" type="AudioStreamPlayer" parent="baseball_area2d"]
stream = ExtResource( 5 )

[node name="snd_airtime" type="AudioStreamPlayer" parent="baseball_area2d"]
stream = SubResource( 5 )
script = ExtResource( 16 )

[node name="snd_hit" type="AudioStreamPlayer" parent="baseball_area2d"]
stream = ExtResource( 11 )

[node name="shadow_2d" type="Area2D" parent="."]
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shadow_2d"]
shape = SubResource( 3 )

[node name="spr_shadow" type="Sprite" parent="shadow_2d"]
z_index = -2
texture = ExtResource( 7 )

[node name="bat_area2d" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bat_area2d"]
shape = SubResource( 4 )

[node name="batter_area2d" type="Node2D" parent="."]
position = Vector2( 135, 194 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="batter_area2d"]
texture = SubResource( 2 )

[node name="snd_click" type="AudioStreamPlayer" parent="batter_area2d"]
stream = ExtResource( 18 )
script = ExtResource( 19 )

[node name="snd_release" type="AudioStreamPlayer" parent="batter_area2d"]
stream = ExtResource( 17 )

[node name="spr_background" type="Sprite" parent="."]
z_index = -10
texture = ExtResource( 8 )
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 12 )]
help_body = "Hold and release the action button to charge up your throw and then charge up your swing.  Time it for a maximumally powerful hit!

Any hit short of a home run is an out.
How many home runs can you hit?"

[node name="spr_flag" type="Sprite" parent="."]
texture = ExtResource( 13 )
centered = false
offset = Vector2( 0, -32 )
script = ExtResource( 14 )

[connection signal="area_entered" from="baseball_area2d" to="baseball_area2d/spr_baseball" method="_on_baseball_area2d_area_entered"]
